[Windows] WASAPIAudioOutputStream: fix delay timestamp calculation

The 'qpc_position' result of IAudioClock::GetPosition must be
converted to raw QPC value before base::TimeTicks::FromQPCValue
can be called on it.

Bug: 783784
Change-Id: I4918c71e439d87b4e231cd9f8d73ac5ed6c69abb